# provizsercilo

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  profiles.toml
bridges/ddgs-bridge/: .dockerignore  Dockerfile  main.py  requirements.txt
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs  tests.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  key_resolver.rs  language_profile.rs  lib.rs  models.rs  rate_limit.rs  selector.rs  storage.rs  tests.rs
crates/providers/: Cargo.toml
crates/providers/src/: brave.rs  ddg_bridge.rs  exa.rs  lib.rs  mojeek.rs  searxng.rs  serper.rs  staan.rs  tavily.rs
crates/storage-postgres/: Cargo.toml
crates/storage-postgres/src/: lib.rs
crates/storage-sqlite/: Cargo.toml
crates/storage-sqlite/src/: lib.rs  migrations.rs  tests.rs
scripts/: install-hooks.sh
scripts/hooks/: pre-push
searxng/: Dockerfile  limiter.toml  settings.yml
server/: Cargo.toml
server/src/: app.rs  catalog.rs  config.rs  error.rs  executor.rs  main.rs  seed.rs  stats.rs
server/src/handlers/: admin.rs  health.rs  mod.rs  report.rs  search.rs  stats.rs
