[workspace]
members = [
    "crates/core",
    "crates/storage-sqlite",
    "crates/storage-postgres",
    "crates/providers",
    "crates/cache",
    "server",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = { version = "0.7", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
dashmap = "6"
toml = "0.8"
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
url = "2"
