[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proviz-sercilo"
path = "src/main.rs"

[dependencies]
proviz-core = { path = "../crates/core" }
storage-sqlite = { path = "../crates/storage-sqlite" }
providers = { path = "../crates/providers" }
cache = { path = "../crates/cache" }

axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
