[package]
name = "proviz-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempdir = "0.3"
