[package]
name = "storage-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
proviz-core = { path = "../core" }
sqlx = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
