[package]
name = "storage-sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
proviz-core = { path = "../core" }
rusqlite = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
